results/graph_memory_v2/random30_parallel_01/temporal-reasoning/0028_0db4c65d/windows/window_0010.txt
[2022-12-25T01:45:01, Sun] 1.User: What's the best way to clean and maintain the new bookends to ensure they last long and keep their appearance?
[2022-12-25T01:45:01.500000, Sun] 2.User: I'm also thinking of getting a new rug for the living room. Can you give me some advice on how to choose the right one?
[2022-12-25T01:45:02, Sun] 3.User: I actually just got rid of my old rug recently, and I'm waiting for a new one to arrive. I'm excited to see how it will change the look and feel of the room. By the way, when I was reorganizing my bookshelf on February 10th, I also vacuumed the entire room, including under the couch cushions, and found a missing TV remote control that had been lost for weeks.
[2022-12-25T01:45:02.500000, Sun] 4.User: The new rug is actually a bit lighter in color and has a more modern design. I'm hoping it will help brighten up the room and create a more open feel. I've been trying to declutter and simplify the space, so a lighter-colored rug should help with that. We'll see how it looks when it arrives!
[2022-12-25T01:45:03, Sun] 5.User: I've actually already gotten some new throw pillows that I think will match the rug nicely. They're a bit lighter in color and have a fun, modern pattern. I've also been thinking about adding some new artwork to the walls, but I haven't decided on the perfect pieces yet. I've been browsing online and saving some ideas on Pinterest, but I think I need to take some more time to decide on the right style and theme.
[2022-12-26T02:31:00.500000, Mon] 6.User: I'm trying to get a better understanding of the process for adjusting my status to a green card. I've had a meeting with a lawyer, but I still have some questions. I submitted my asylum application 21 months ago, and I'm curious about the typical timeframe for this process.
[2022-12-26T02:31:01, Mon] 7.User: What are the documents required for the AOS application, and are there any specific requirements for asylum seekers like myself?
[2022-12-26T02:31:01.500000, Mon] 8.User: I'm still a bit unclear about the proof of continuous presence requirement. Can you explain what kind of documents would be acceptable for this and if there's a specific timeframe for these documents?
[2022-12-26T02:31:02, Mon] 9.User: I'm still a bit unclear about the affidavit from friends or family members. Can you provide more information on what exactly they need to include in the letter and how it should be formatted?
[2022-12-26T02:31:02.500000, Mon] 10.User: I'd like to ask a follow-up question about the affidavit. How detailed does the affiant need to be when describing their interactions with me? For example, do they need to provide specific dates or just a general idea of how often we've seen each other?
[2022-12-26T02:31:03, Mon] 11.User: I'm going to ask a follow-up question about the affidavit. What if the affiant is not a US citizen or permanent resident? Can they still provide an affidavit, and are there any specific requirements or considerations they need to be aware of?
[2022-12-26T02:39:00.500000, Mon] 12.User: library is added to environment.yml file even though i uninstalled it from pip
[2022-12-26T02:39:01, Mon] 13.User: the --no-builds method does not work; it still adds uninstalled pip packages
[2022-12-26T02:39:01.500000, Mon] 14.User: tell me the command of creating pip requirements.txt fiele
[2022-12-26T02:39:02, Mon] 15.User: when using pipreqs --force --encoding=utf-8 command, it gives me the following error:

File "d:\CS\projects\graduation\_project\.conda\lib\ast.py", line 50, in parse
 return compile(source, filename, mode, flags,
 File "", line 2
 print add\_code\_to\_python\_process.run\_python\_code(3736, "print(20)", connect\_debugger\_tracing=False)
 ^
SyntaxError: invalid syntax